# DesktopFramework

./: Makefile  Makefile.win  README.md  config.xml  meson.build  meson.options  sinticbolivia-copia.rc  sinticbolivia.rc  test  test.vala
Database/: Entity.vala  MySQL.vala  Postgres.vala  SBBelongsTo.vala  SBDBCell.vala  SBDBColumn.vala  SBDBQuery.vala  SBDBRow.vala  SBDBTable.vala  SBDatabaseException.vala  SBHasMany.vala  SBHasOne.vala  SQLite.vala  SQLite.vala~  database.vala  database.vala~
ccode/: cpuid.c  smtp.c  smtp_client.c
classes/: Event.vala  ISBModule.vala  ISBRestModule.vala  Observable.vala  Observer.vala  RestController.vala  RestHandler.vala  RestResponse.vala  RestResponseJson.vala  RestServer.vala  SBCallbackArgs.vala  SBCollection.vala  SBException.vala  SBGlobals.vala  SBModule.vala  SBObject.vala  SBRequest.vala  SBResponse.vala  SBSerializable.vala  SBSmtpClient.vala  SBSmtpConfig.vala  SBText.vala  SBWebRoute.vala  WebRoute.vala  class.category.vala  class.config.vala  class.customer.vala  class.datetime.vala  class.db-object.vala  class.excel.vala.old  class.factory.vala  class.file-helper.vala  class.meta.vala  class.os.vala  class.parameter.vala  class.product.vala  class.role.vala  class.store.vala  class.transaction-item.vala  class.transaction-type.vala  (+3 more)
reports/: Makefile  Makefile.win  Makefile~  SinticBoliviaReports.vapi  class.pdf-cell.vala  class.pdf-report.vala  class.pdf-row.vala  class.pdf-table.vala  sinticboliviareports.rc
tests/: api-rest.vala
vapi/: libharu.vapi
widgets/: GtkSinticBolivia.h  GtkSinticBolivia.vapi  Makefile  Makefile.win  SBDateTimePicker.vala  SBNotebook.vala  class.cairo-table.vala  class.dashboard.vala  class.db-table-treeview.vala  class.fixed.vala  class.gtk-helper.vala  class.gtk-module.vala  class.infodialog.vala  class.report.vala.old  popover.c  widget.datepicker.vala  widget.tag.vala
widgets/printpreview/: Makefile  Makefile.win  class.print-preview.vala  test.vala
zint/: Makefile  test  test.vala  zint.vapi
